--- a/index.html
+++ b/index.html
@@ -1,248 +1,89 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pembelajaran Biologi - Fotosintesis</title>
-
-<style>
-    /* ===== GLOBAL ===== */
-    body {
-        margin: 0;
-        font-family: "Poppins", sans-serif;
-        background: #e8f5e9;
-        color: #222;
-    }
-    h2 { color: #1b5e20; }
-
-    /* ===== ANIMATIONS ===== */
-    @keyframes fadeIn {
-        from {opacity: 0; transform: translateY(20px);}
-        to {opacity: 1; transform: translateY(0);}
-    }
-
-    /* ===== NAVBAR ===== */
-    nav {
-        position: sticky;
-        top: 0;
-        padding: 15px 30px;
-        background: #1b5e20;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        color: white;
-        z-index: 1000;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
-    nav a {
-        color: white;
-        margin-left: 20px;
-        text-decoration: none;
-        font-weight: 500;
-    }
-    nav a:hover {
-        text-decoration: underline;
-        opacity: 0.8;
-    }
-
-    /* ===== HERO ===== */
-    .hero {
-        text-align: center;
-        padding: 90px 25px;
-        background: linear-gradient(135deg, #1b5e20, #4caf50, #7cd67c);
-        color: white;
-        animation: fadeIn 1s ease;
-    }
-    .hero h1 {
-        font-size: 42px;
-        margin-bottom: 10px;
-        text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
-    }
-
-    /* ===== CARD STYLE ===== */
-    .container {
-        max-width: 1000px;
-        margin: 25px auto;
-        padding: 0 20px;
-    }
-    .card {
-        background: rgba(255,255,255,0.9);
-        backdrop-filter: blur(6px);
-        padding: 22px;
-        border-radius: 14px;
-        margin: 15px 0;
-        box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-        animation: fadeIn 0.8s ease;
-    }
-
-    /* ===== VIDEO ===== */
-    .video-container {
-        position: relative;
-        padding-bottom: 56.25%;
-        height: 0;
-    }
-    iframe {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        border: 0;
-        border-radius: 15px;
-    }
-
-    /* ===== QUIZ ===== */
-    .quiz-box {
-        background: #f1f8e9;
-        padding: 20px;
-        border-left: 6px solid #1b5e20;
-        border-radius: 10px;
-        margin-top: 20px;
-    }
-    .quiz-box h3 {
-        margin-top: 0;
-    }
-    button {
-        background: #1b5e20;
-        color: white;
-        padding: 10px 16px;
-        border-radius: 6px;
-        font-size: 15px;
-        border: none;
-        cursor: pointer;
-        margin-top: 10px;
-    }
-    button:hover {
-        opacity: 0.8;
-    }
-
-    /* ===== FOOTER ===== */
-    footer {
-        background: #1b5e20;
-        color: white;
-        text-align: center;
-        padding: 18px;
-        margin-top: 40px;
-    }
-</style>
-
-<script>
-    function cekKuis() {
-        let skor = 0;
-
-        const jawaban = {
-            q1: "b",
-            q2: "a",
-            q3: "c"
-        };
-
-        for (let nomor in jawaban) {
-            let pilihan = document.querySelector(`input[name="${nomor}"]:checked`);
-            if (pilihan && pilihan.value === jawaban[nomor]) skor++;
-        }
-
-        document.getElementById("hasilAkhir").innerHTML =
-            "Skor kamu: " + skor + "/3";
-
-        document.getElementById("hasilAkhir").style.fontSize = "20px";
-        document.getElementById("hasilAkhir").style.fontWeight = "bold";
-    }
-</script>
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Beranda - Pembelajaran Fotosintesis</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 
 <nav>
-    <div><b>Biologi</b> | Fotosintesis</div>
-    <div>
-        <a href="#tujuan">Tujuan</a>
-        <a href="#materi">Materi</a>
-        <a href="#video">Video</a>
-        <a href="#kuis">Kuis</a>
-    </div>
+  <div class="logo">BIO • Fotosintesis</div>
+  <div class="nav-links">
+    <a href="index.html">Home</a>
+    <a href="materi.html">Materi</a>
+    <a href="kuis.html">Kuis</a>
+    <a href="rangkuman.html">Rangkuman</a>
+    <a href="profil.html">Profil</a>
+    <label style="margin-left:12px;">
+      <input id="themeToggle" type="checkbox" style="vertical-align:middle" /> <span style="font-weight:600">Dark</span>
+    </label>
+  </div>
 </nav>
 
 <section class="hero">
-    <h1>Pembelajaran Fotosintesis</h1>
-    <p>Proses yang membuat tumbuhan menjadi sumber kehidupan bagi makhluk hidup lainnya.</p>
+  <h1>Belajar Fotosintesis dengan Interaktif</h1>
+  <p class="subtitle">Materi, video, kuis 10 soal, rangkuman, dan evaluasi — semua dalam satu paket edukasi.</p>
 </section>
 
+<main class="container">
+  <div class="grid">
+    <div class="card">
+      <h3>Materi Lengkap</h3>
+      <p>Pelajari definisi, tahapan, dan faktor fotosintesis beserta video pembelajaran.</p>
+      <a class="btn" href="materi.html">Buka Materi</a>
+    </div>
+
+    <div class="card">
+      <h3>Kuis Interaktif</h3>
+      <p>10 soal dengan penilaian otomatis — simpan hasil dan lihat evaluasi akhir.</p>
+      <a class="btn" href="kuis.html">Mulai Kuis</a>
+    </div>
+
+    <div class="card">
+      <h3>Rangkuman Cepat</h3>
+      <p>Ringkasan poin penting yang mudah diingat — cocok untuk persiapan ulangan.</p>
+      <a class="btn ghost" href="rangkuman.html">Baca Rangkuman</a>
+    </div>
+
+    <div class="card">
+      <h3>Tentang Pembuat</h3>
+      <p>Profil singkat pembuat materi & kontak — transparan dan akademis.</p>
+      <a class="btn" href="profil.html">Lihat Profil</a>
+    </div>
+
+    <div class="card full">
+      <h3>Evaluasi Terakhir</h3>
+      <p id="evalText">Belum mengerjakan kuis — hasil akan muncul di sini setelah submit.</p>
+      <a class="btn" href="kuis.html">Kerjakan Kuis</a>
+    </div>
+  </div>
+</main>
+
 <div class="container">
-
-    <!-- TUJUAN -->
-    <div class="card" id="tujuan">
-        <h2>🎯 Tujuan Pembelajaran</h2>
-        <ul>
-            <li>Memahami pengertian fotosintesis dengan benar.</li>
-            <li>Menjelaskan tahap-tahap fotosintesis.</li>
-            <li>Menganalisis faktor-faktor yang mempengaruhi fotosintesis.</li>
-            <li>Mengidentifikasi manfaat fotosintesis bagi kehidupan.</li>
-        </ul>
-    </div>
-
-    <!-- MATERI -->
-    <div class="card" id="materi">
-        <h2>📘 Materi: Apa Itu Fotosintesis?</h2>
-        <p>
-            Fotosintesis adalah proses tumbuhan mengubah cahaya matahari menjadi energi kimia berupa glukosa.
-            Proses ini dilakukan oleh klorofil dalam kloroplas.
-        </p>
-
-        <h3>🌱 Tahapan Fotosintesis</h3>
-        <ol>
-            <li><b>Reaksi Terang</b> – butuh cahaya, terjadi di grana.</li>
-            <li><b>Reaksi Gelap (Siklus Calvin)</b> – tidak butuh cahaya langsung, terjadi di stroma.</li>
-        </ol>
-
-        <h3>🧪 Rumus Fotosintesis</h3>
-        <p style="text-align:center; font-size: 22px; font-weight: bold;">
-            6CO₂ + 6H₂O + cahaya → C₆H₁₂O₆ + 6O₂
-        </p>
-    </div>
-
-    <!-- VIDEO -->
-    <div class="card" id="video">
-        <h2>🎥 Video Pembelajaran</h2>
-        <div class="video-container">
-            <iframe 
-                src="https://www.youtube.com/embed/nlXwuNHF8JM"
-                allowfullscreen>
-            </iframe>
-        </div>
-    </div>
-
-    <!-- KUIS -->
-    <div class="card" id="kuis">
-        <h2>📝 Kuis Interaktif</h2>
-
-        <div class="quiz-box">
-            <h3>1. Apa bahan utama fotosintesis?</h3>
-            <label><input type="radio" name="q1" value="a"> Oksigen dan nitrogen</label><br>
-            <label><input type="radio" name="q1" value="b"> Karbon dioksida dan air</label><br>
-            <label><input type="radio" name="q1" value="c"> Protein dan mineral</label><br>
-        </div>
-
-        <div class="quiz-box">
-            <h3>2. Di mana reaksi terang terjadi?</h3>
-            <label><input type="radio" name="q2" value="a"> Grana</label><br>
-            <label><input type="radio" name="q2" value="b"> Sitoplasma</label><br>
-            <label><input type="radio" name="q2" value="c"> Inti sel</label><br>
-        </div>
-
-        <div class="quiz-box">
-            <h3>3. Apa hasil utama fotosintesis?</h3>
-            <label><input type="radio" name="q3" value="a"> Lemak</label><br>
-            <label><input type="radio" name="q3" value="b"> Protein</label><br>
-            <label><input type="radio" name="q3" value="c"> Glukosa dan oksigen</label><br>
-        </div>
-
-        <button onclick="cekKuis()">Cek Jawaban</button>
-        <p id="hasilAkhir" style="margin-top: 20px;"></p>
-    </div>
-
+  <div class="footer">
+    © 2025 — Situs Pembelajaran Fotosintesis • Dibuat untuk keperluan pendidikan
+  </div>
 </div>
 
-<footer>
-    © 2024 Website Pembelajaran Biologi — Materi Fotosintesis
-</footer>
+<script src="assets/js/main.js"></script>
+<script>
+  // theme init + toggle hookup
+  initTheme = window.site && window.site.toggleTheme ? null : null; // just ensure script loaded
+  document.getElementById('themeToggle').addEventListener('change', (e) => {
+    window.site.toggleTheme(e.target.checked);
+  });
+
+  // show last eval if present
+  document.addEventListener('DOMContentLoaded', () => {
+    const res = window.site.getLastQuizResult();
+    const evalText = document.getElementById('evalText');
+    if(res){
+      evalText.innerHTML = `Skor terakhir: ${res.score}/${res.total} (${res.percent}%) — ${new Date(res.timestamp).toLocaleString()}`;
+    }
+  });
+</script>
 
 </body>
 </html>
